[gd_scene load_steps=9 format=3 uid="uid://br8j2u85ew862"]

[ext_resource type="Script" path="res://Player.gd" id="1_45q1j"]
[ext_resource type="Texture2D" uid="uid://orbapjr17ck5" path="res://assets/player.png" id="2_y7tq1"]
[ext_resource type="Script" path="res://addons/jam_launch/core/JamSync.gd" id="3_kbhxu"]
[ext_resource type="Texture2D" uid="uid://cqp6c8766oqmm" path="res://assets/tilemap.png" id="3_nc7ii"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5uy6k"]
radius = 68.0
height = 214.0

[sub_resource type="AtlasTexture" id="AtlasTexture_i63sy"]
atlas = ExtResource("3_nc7ii")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvgka"]
atlas = ExtResource("3_nc7ii")
region = Rect2(256, 128, 128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_i1q5s"]
radius = 139.058

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_45q1j")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_y7tq1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5uy6k")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -600)
zoom = Vector2(0.3, 0.3)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="Instructions" type="Label" parent="Camera2D/CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Press SPACE to call for a supply drop."

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "seconds remaining."

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = SubResource("AtlasTexture_i63sy")
expand_mode = 3

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Summon building materials to build your tower."

[node name="HBoxContainer2" type="HBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = SubResource("AtlasTexture_dvgka")
expand_mode = 3

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Antigrav tiles can help you get air."

[node name="HBoxContainer3" type="HBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_y7tq1")
expand_mode = 3

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Get the most air to win."

[node name="VBoxContainer2" type="VBoxContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Current Leader: "

[node name="Label2" type="Label" parent="Camera2D/CanvasLayer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Camera2D/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="JamSync" type="Node" parent="."]
script = ExtResource("3_kbhxu")
spawn_properties = Array[String](["position", "rotation", "pid", "displayed_time_remaining", "winner", "final_winner"])
sync_properties = Array[String](["position", "rotation", "displayed_time_remaining", "winner", "final_winner"])

[node name="effect_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="effect_range"]
shape = SubResource("CircleShape2D_i1q5s")

[connection signal="area_entered" from="effect_range" to="." method="_on_effect_range_area_entered"]
[connection signal="area_exited" from="effect_range" to="." method="_on_effect_range_area_exited"]
